backend/envoy/template/static_resources.yml
listeners:
- name: http_listener
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 80
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        stat_prefix: ingress_http
        codec_type: AUTO
        http2_protocol_options: {}
        route_config:
          name: local_route
          virtual_hosts:
          - name: local_service
            domains: ["*"]
            routes:
            - match:
                prefix: "/"
              redirect:
                https_redirect: true
        http_filters:
        - name: envoy.filters.http.router
- name: https_listener
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 443
  listener_filters:
  - name: "envoy.filters.listener.tls_inspector"
    typed_config:
      "@type": type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
  filter_chains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        http_filters:
        - name: envoy.filters.http.router
          typed_config:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        route_config:
          name: local_route
          virtual_hosts:
          - domains:
            - '*'
            name: local_host
            routes:
            - match:
                prefix: /api
              route:
                host_rewrite_literal: localhost
                cluster: se-backend
            - match:
                prefix: /
              route:
                host_rewrite_literal: localhost
                cluster: se-frontend
        stat_prefix: ingress_http
        http2_protocol_options: {}
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
        common_tls_context:
          tls_certificates:
          - certificate_chain:
              filename: /app/self-signed/certificate.crt
            private_key:
              filename: /app/self-signed/private.key

clusters:
- connect_timeout: 5s
  dns_lookup_family: V4_ONLY
  load_assignment:
    cluster_name: se-frontend
    endpoints:
    - lb_endpoints:
      - endpoint:
          address:
            socket_address:
              address: localhost
              port_value: '5572'
  name: se-frontend
  type: LOGICAL_DNS
- connect_timeout: 5s
  dns_lookup_family: V4_ONLY
  load_assignment:
    cluster_name: se-backend
    endpoints:
    - lb_endpoints:
      - endpoint:
          address:
            socket_address:
              address: localhost
              port_value: '5571'
  name: se-backend
  type: LOGICAL_DNS
